# seatfinder

./: Cargo.toml  README.md
src/: allocation.rs  constants.rs  consts.rs  error.rs  lib.rs  macros.rs  main.rs  methods.rs  offering.rs  query.rs  searcher.rs  seatfinder.rs  selector.rs
