[package]
name = "seatfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
futures = "0.3.30"
lazy_static = "1.5.0"
once_cell = "1.19.0"
regex = "1.10.5"
serde = "1.0.203"
serde_json = "1.0.120"
strum = "0.26.3"
thirtyfour = "0.32.0"
thiserror = "1.0.61"
tokio = "1.38.0"
