[package]
name = "seatfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
env_logger = "0.11.5"
futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.22"
once_cell = "1.19.0"
regex = "1.10.5"
rodio = "0.19.0"
serde = "1.0.203"
serde_json = "1.0.120"
strum = "0.26.3"
thirtyfour = "0.32.0"
thiserror = "1.0.61"
tokio = "1.38.0"
